--- a/fp_template.htm
+++ b/fp_template.htm
@@ -187,41 +187,43 @@
                     <!-- FP Start -->
                     <section class="fp">
                         <p>註:<abbr class="necessary" title=“為必填(選)欄位,不能為空白。“>*</abbr>為必填(選)欄位, 不能為空白。</p>
-                        <form action="" class="form_grid">
-                            <div class="form_grp">
-                                <label for="" class="form_title"><abbr class="necessary" title=“為必填(選)欄位,不能為空白。“>*</abbr>您的電子信箱：</label>
-                                <div class="form_content">
-                                    <input type="text" id="" value="">
-                                    <div class="notice_warning">這似乎不是一個正常的格式 <a href="javascript:;" class="close"><img src="images/basic/icon_close.svg" alt=""></a>
+                        <form action="">
+                            <div class="form_grid flex_form">
+                                <div class="form_grp">
+                                    <label for="" class="form_title"><abbr class="necessary" title=“為必填(選)欄位,不能為空白。“>*</abbr>您的電子信箱：</label>
+                                    <div class="form_content">
+                                        <input type="text" id="" value="">
+                                        <div class="notice_warning">這似乎不是一個正常的格式 <a href="javascript:;" class="close"><img src="images/basic/icon_close.svg" alt=""></a>
+                                        </div>
+                                    </div> 
+                                </div>
+                                <div class="form_grp">
+                                    <label for="" class="form_title"><abbr class="necessary" title=“為必填(選)欄位,不能為空白。“>*</abbr>收件者電子信箱：</label>
+                                    <div class="form_content">
+                                        <input name="" id="" type="text">
+                                        <div class="notice_info">請輸入Email，多個帳號請用 ; 隔開。 <a href="javascript:;" class="close"><img src="images/basic/icon_close.svg" alt=""></a>
+                                        </div>
                                     </div>
                                 </div>
-                            </div>
-                            <div class="form_grp">
-                                <label for="" class="form_title"><abbr class="necessary" title=“為必填(選)欄位,不能為空白。“>*</abbr>收件者電子信箱：</label>
-                                <div class="form_content">
-                                    <input name="" id="" type="text">
-                                    <div class="notice_info">請輸入Email，多個帳號請用 ; 隔開。 <a href="javascript:;" class="close"><img src="images/basic/icon_close.svg" alt=""></a>
+                                <div class="form_grp">
+                                    <label for="" class="form_title"><abbr class="necessary" title=“為必填(選)欄位,不能為空白。“>*</abbr>內容：</label>
+                                    <div class="form_content">
+                                        <textarea name="" id="" cols="30" rows="70"></textarea>
                                     </div>
                                 </div>
-                            </div>
-                            <div class="form_grp">
-                                <label for="" class="form_title"><abbr class="necessary" title=“為必填(選)欄位,不能為空白。“>*</abbr>內容：</label>
-                                <div class="form_content">
-                                    <textarea name="" id="" cols="30" rows="70"></textarea>
-                                </div>
-                            </div>
-                            <div class="form_grp">
-                                <label class="form_title"><abbr class="necessary" title=“為必填(選)欄位,不能為空白。“>*</abbr>驗證碼：</label>
-                                <div class="form_content">
-                                    <img src="images/basic/captcha.gif" alt="" class="captcha">
-                                    <input type="text" id="" value="">
-                                    <div class="notice_error">您輸入的驗證碼錯誤 <a href="javascript:;" class="close"><img src="images/basic/icon_close.svg" alt=""></a>
+                                <div class="form_grp">
+                                    <label class="form_title"><abbr class="necessary" title=“為必填(選)欄位,不能為空白。“>*</abbr>驗證碼：</label>
+                                    <div class="form_content">
+                                        <img src="images/basic/captcha.gif" alt="" class="captcha">
+                                        <input type="text" id="" value="">
+                                        <div class="notice_error">您輸入的驗證碼錯誤 <a href="javascript:;" class="close"><img src="images/basic/icon_close.svg" alt=""></a>
+                                        </div>
                                     </div>
                                 </div>
-                            </div>
-                            <div class="btn_grp">
-                                <input name="" type="reset" value="清除">
-                                <input name="" type="submit" value="送出">
+                                <div class="btn_grp form_inline">
+                                    <input name="" type="reset" value="清除">
+                                    <input name="" type="submit" value="送出">
+                                </div>
                             </div>
                         </form>
                     </section>
