--- a/qp_template.htm
+++ b/qp_template.htm
@@ -187,7 +187,7 @@
                     <!-- QP Start -->
                     <section class="qp">
                         <p>註:<abbr class="necessary" title="為必填(選)欄位,不能為空白。">*</abbr>為必填(選)欄位, 不能為空白。</p>
-                        <form action="" class="form_grid flex-form">
+                        <form action="" class="form_grid flex_form">
                             <div class="form_grp">
                                 <label for="" class="form_title"><abbr class="necessary" title="為必填(選)欄位,不能為空白。">*</abbr>您的真實姓名：</label>
                                 <div class="form_content">
@@ -255,9 +255,9 @@
                                     <input type="text" id="" value="">
                                 </div>
                             </div>
-                            <div class="btn_grp">
-                                <input name="" type="reset" value="清除">
-                                <input name="Search" type="submit" value="送出">
+                            <div class="btn_grp form_inline">
+                                <input name="" class="btn" type="reset" value="清除">
+                                <input name="Search" class="btn" type="submit" value="送出">
                             </div>
                         </form>
                     </section>
