--- a/cp_template.htm
+++ b/cp_template.htm
@@ -10,15 +10,15 @@
     <script src="js/html5shiv.js"></script>
     <script src="js/respond.min.js"></script>
 <![endif]-->
-    <!-- slick css-->
-    <link rel="stylesheet" type="text/css" href="vendor/slick/slick.css" />
-    <link rel="stylesheet" type="text/css" href="vendor/slick/slick-theme.css" />
-    <!-- 燈箱facybox -->
-    <link rel="stylesheet" type="text/css" href="vendor/facybox/dist/jquery.fancybox.min.css">
-    <!-- hyUI css -->
-    <link rel="stylesheet" href="css/hyui.css">
-    <!-- favicon -->
-    <link href="images/favicon.png" rel="icon" type="image/x-icon">
+<!-- slick css-->
+<link rel="stylesheet" type="text/css" href="vendor/slick/slick.css" />
+<link rel="stylesheet" type="text/css" href="vendor/slick/slick-theme.css" />
+<!-- 燈箱facybox -->
+<link rel="stylesheet" type="text/css" href="vendor/facybox/dist/jquery.fancybox.min.css">
+<!-- hyUI css -->
+<link rel="stylesheet" href="css/hyui.css">
+<!-- favicon -->
+<link href="images/favicon.png" rel="icon" type="image/x-icon">
 </head>
 
 <body>
@@ -70,10 +70,10 @@
                     <div class="form_grp">
                         <label for="mustSameAsId">搜尋</label>
                         <input name="username" id="mustSameAsId" type="text" placeholder="請輸入文字" accesskey="S">
-                        <input name="" type="submit" title="查詢" value="查詢" />
+                        <input name="" type="submit" value="查詢" class="btn btn-search" />
                     </div>
                     <div class="btn_grp">
-                        <input name="" type="submit" value="進階搜尋" />
+                        <input name="" type="submit" value="進階搜尋" class="btn" />
                     </div>
                     <div class="keywordHot">
                         <ul>
@@ -283,77 +283,77 @@
                             <!-- 此範例為4:3比例 -->
                             <picture>
                                 <source media="(min-width: 1200px)" srcset="images/demo/01.jpg">
-                                <source media="(min-width: 992px)" srcset="images/demo/01.jpg">
-                                <source media="(min-width: 576px)" srcset="images/demo/01.jpg">
-                                <source media="(max-width: 575px)" srcset="images/demo/01.jpg">
-                                <img data-src="images/demo/01.jpg" class="lazy">
-                                <noscript><img src="images/demo/01.jpg"></noscript>
-                            </picture>
-                            <span>圖說</span>
-                        </div>
-                        <p>連結文字樣式 </a>大更沒於正時節直只們來壓算有先，求化化看雨的了元得前意要，性說用。以是一分，首字地旅紀親朋經有，在沒許、兒讓靈身不；候案司通資鄉下一支情西也哥際發你也是濟言通海後的健童頭各便。大更沒於正時節直只們來壓算有先，求化化看雨的了元得前意要，性說用。以是一分，首字地旅紀親朋經有，在沒許、兒讓靈身不；候案司通資鄉下一支情西也哥際發你也是濟言通海後的健童頭各便。</p>
-                        <h2>標題二</h2>
-                        <p><a href="#">連結文字樣式</a>連結文字樣式</a>大更沒於正時節直只們來壓算有先，求化化看雨的了元得前意要，性說用。以是一分，首字地旅紀親朋經有，在沒許、兒讓靈身不；候案司通資鄉下一支情西也哥際發你也是濟言通海後的健童頭各便。大更沒於正時節直只們來壓算有先，求化化看雨的了元得前意要，性說用。以是一分，首字地旅紀親朋經有，在沒許、兒讓靈身不；候案司通資鄉下一支情西也哥際發你也是濟言通海後的健童頭各便。以是一分，首字地旅紀親朋經有，在沒許、兒讓靈身不；候案司通資鄉下一支情西也哥際發你也是濟言通海後的健童頭各便。大更沒於正時節直只們來壓算有先，求化化看雨的了元得前意要，性說用。以是一分，首字地旅紀親朋經有，在沒許、兒讓靈身不；候案司通資鄉下一支情西也哥際發你也是濟言通海後的健童頭各便。</p>
-                        <h3>標題三</h3>
-                        <p>大更沒於正時節直只們來壓算有先，求化化看雨的了元得前意要，性說用。</p>
-                        <blockquote>大更沒於正時節直只們來壓算有先，求化化看雨的了元得前意要，性說用。</blockquote>
-                        <h4>標題四</h4>
-                        <p>連結文字樣式 </a>大更沒於正時節直只們來壓算有先，求化化看雨的了元得前意要，性說用。以是一分，首字地旅紀親朋經有，在沒許、兒讓靈身不；候案司通資鄉下一支情西也哥際發你也是濟言通海後的健童頭各便。大更沒於正時節直只們來壓算有先，求化化看雨的了元得前意要，性說用。以是一分，首字地旅紀親朋經有，在沒許、兒讓靈身不；候案司通資鄉下一支情西也哥際發你也是濟言通海後的健童頭各便。</p>
-                        <h5>標題五</h5>
-                        <p>連結文字樣式</a>大更沒於正時節直只們來壓算有先，求化化看雨的了元得前意要，性說用。以是一分，首字地旅紀親朋經有，在沒許、兒讓靈身不；候案司通資鄉下一支情西也哥際發你也是濟言通海後的健童頭各便。大更沒於正時節直只們來壓算有先，求化化看雨的了元得前意要，性說用。以是一分，首字地旅紀親朋經有，在沒許、兒讓靈身不；候案司通資鄉下一支情西也哥際發你也是濟言通海後的健童頭各便。</p>
-                        <h6>標題六</h6>
-                        <p>連結文字樣式</a>大更沒於正時節直只們來壓算有先，求化化看雨的了元得前意要，性說用。以是一分，首字地旅紀親朋經有，在沒許、兒讓靈身不；候案司通資鄉下一支情西也哥際發你也是濟言通海後的健童頭各便。大更沒於正時節直只們來壓算有先，求化化看雨的了元得前意要，性說用。以是一分，首字地旅紀親朋經有，在沒許、兒讓靈身不；候案司通資鄉下一支情西也哥際發你也是濟言通海後的健童頭各便。</p>
-                        <h3>列表樣式</h3>
-                        <ul>
-                            <li>影開兒中不們西動會味理化由子常洲國有標題</li>
-                            <li>首動我行得流事個要使著獨操大</li>
-                            <li>推列黃上道有畫走長市上</li>
-                            <li>證會不就人推陸跑公片重</li>
-                            <li>處來在山工國生即工球一，易心個長什去實用當們公有也候</li>
-                        </ul>
-                        <ol>
-                            <li>影開兒中不們西動會味理化由子常洲國有標題</li>
-                            <li>首動我行得流事個要使著獨操大</li>
-                            <li>推列黃上道有畫走長市上</li>
-                            <li>證會不就人推陸跑公片重</li>
-                            <li>處來在山工國生即工球一，易心個長什去實用當們公有也候</li>
-                        </ol>
-                        <h3>表格樣式</h3>
-                        <table>
-                            <tr>
-                                <th>th 1</th>
-                                <th>th 2</th>
-                                <th>th 3</th>
-                                <th>th 4</th>
-                                <th>th 5</th>
-                                <th>th 6</th>
-                            </tr>
-                            <tr>
-                                <th>th A</th>
-                                <td>td 資料</td>
-                                <td>td 資料</td>
-                                <td>td 資料</td>
-                                <td>td 資料</td>
-                                <td>td 資料</td>
-                            </tr>
-                            <tr>
-                                <th>th B</th>
-                                <td>td 資料</td>
-                                <td>td 資料</td>
-                                <td>td 資料</td>
-                                <td>td 資料</td>
-                                <td>td 資料</td>
-                            </tr>
-                            <tr>
-                                <th>th C</th>
-                                <td>td 資料</td>
-                                <td>td 資料</td>
-                                <td>td 資料</td>
-                                <td>td 資料</td>
-                                <td>td 資料</td>
-                            </tr>
-                        </table>
-                        <!-- cp_slider+slick_lightbox -->
+                                    <source media="(min-width: 992px)" srcset="images/demo/01.jpg">
+                                        <source media="(min-width: 576px)" srcset="images/demo/01.jpg">
+                                            <source media="(max-width: 575px)" srcset="images/demo/01.jpg">
+                                                <img data-src="images/demo/01.jpg" class="lazy">
+                                                <noscript><img src="images/demo/01.jpg"></noscript>
+                                            </picture>
+                                            <span>圖說</span>
+                                        </div>
+                                        <p>連結文字樣式 </a>大更沒於正時節直只們來壓算有先，求化化看雨的了元得前意要，性說用。以是一分，首字地旅紀親朋經有，在沒許、兒讓靈身不；候案司通資鄉下一支情西也哥際發你也是濟言通海後的健童頭各便。大更沒於正時節直只們來壓算有先，求化化看雨的了元得前意要，性說用。以是一分，首字地旅紀親朋經有，在沒許、兒讓靈身不；候案司通資鄉下一支情西也哥際發你也是濟言通海後的健童頭各便。</p>
+                                        <h2>標題二</h2>
+                                        <p><a href="#">連結文字樣式</a>連結文字樣式</a>大更沒於正時節直只們來壓算有先，求化化看雨的了元得前意要，性說用。以是一分，首字地旅紀親朋經有，在沒許、兒讓靈身不；候案司通資鄉下一支情西也哥際發你也是濟言通海後的健童頭各便。大更沒於正時節直只們來壓算有先，求化化看雨的了元得前意要，性說用。以是一分，首字地旅紀親朋經有，在沒許、兒讓靈身不；候案司通資鄉下一支情西也哥際發你也是濟言通海後的健童頭各便。以是一分，首字地旅紀親朋經有，在沒許、兒讓靈身不；候案司通資鄉下一支情西也哥際發你也是濟言通海後的健童頭各便。大更沒於正時節直只們來壓算有先，求化化看雨的了元得前意要，性說用。以是一分，首字地旅紀親朋經有，在沒許、兒讓靈身不；候案司通資鄉下一支情西也哥際發你也是濟言通海後的健童頭各便。</p>
+                                        <h3>標題三</h3>
+                                        <p>大更沒於正時節直只們來壓算有先，求化化看雨的了元得前意要，性說用。</p>
+                                        <blockquote>大更沒於正時節直只們來壓算有先，求化化看雨的了元得前意要，性說用。</blockquote>
+                                        <h4>標題四</h4>
+                                        <p>連結文字樣式 </a>大更沒於正時節直只們來壓算有先，求化化看雨的了元得前意要，性說用。以是一分，首字地旅紀親朋經有，在沒許、兒讓靈身不；候案司通資鄉下一支情西也哥際發你也是濟言通海後的健童頭各便。大更沒於正時節直只們來壓算有先，求化化看雨的了元得前意要，性說用。以是一分，首字地旅紀親朋經有，在沒許、兒讓靈身不；候案司通資鄉下一支情西也哥際發你也是濟言通海後的健童頭各便。</p>
+                                        <h5>標題五</h5>
+                                        <p>連結文字樣式</a>大更沒於正時節直只們來壓算有先，求化化看雨的了元得前意要，性說用。以是一分，首字地旅紀親朋經有，在沒許、兒讓靈身不；候案司通資鄉下一支情西也哥際發你也是濟言通海後的健童頭各便。大更沒於正時節直只們來壓算有先，求化化看雨的了元得前意要，性說用。以是一分，首字地旅紀親朋經有，在沒許、兒讓靈身不；候案司通資鄉下一支情西也哥際發你也是濟言通海後的健童頭各便。</p>
+                                        <h6>標題六</h6>
+                                        <p>連結文字樣式</a>大更沒於正時節直只們來壓算有先，求化化看雨的了元得前意要，性說用。以是一分，首字地旅紀親朋經有，在沒許、兒讓靈身不；候案司通資鄉下一支情西也哥際發你也是濟言通海後的健童頭各便。大更沒於正時節直只們來壓算有先，求化化看雨的了元得前意要，性說用。以是一分，首字地旅紀親朋經有，在沒許、兒讓靈身不；候案司通資鄉下一支情西也哥際發你也是濟言通海後的健童頭各便。</p>
+                                        <h3>列表樣式</h3>
+                                        <ul>
+                                            <li>影開兒中不們西動會味理化由子常洲國有標題</li>
+                                            <li>首動我行得流事個要使著獨操大</li>
+                                            <li>推列黃上道有畫走長市上</li>
+                                            <li>證會不就人推陸跑公片重</li>
+                                            <li>處來在山工國生即工球一，易心個長什去實用當們公有也候</li>
+                                        </ul>
+                                        <ol>
+                                            <li>影開兒中不們西動會味理化由子常洲國有標題</li>
+                                            <li>首動我行得流事個要使著獨操大</li>
+                                            <li>推列黃上道有畫走長市上</li>
+                                            <li>證會不就人推陸跑公片重</li>
+                                            <li>處來在山工國生即工球一，易心個長什去實用當們公有也候</li>
+                                        </ol>
+                                        <h3>表格樣式</h3>
+                                        <table>
+                                            <tr>
+                                                <th>th 1</th>
+                                                <th>th 2</th>
+                                                <th>th 3</th>
+                                                <th>th 4</th>
+                                                <th>th 5</th>
+                                                <th>th 6</th>
+                                            </tr>
+                                            <tr>
+                                                <th>th A</th>
+                                                <td>td 資料</td>
+                                                <td>td 資料</td>
+                                                <td>td 資料</td>
+                                                <td>td 資料</td>
+                                                <td>td 資料</td>
+                                            </tr>
+                                            <tr>
+                                                <th>th B</th>
+                                                <td>td 資料</td>
+                                                <td>td 資料</td>
+                                                <td>td 資料</td>
+                                                <td>td 資料</td>
+                                                <td>td 資料</td>
+                                            </tr>
+                                            <tr>
+                                                <th>th C</th>
+                                                <td>td 資料</td>
+                                                <td>td 資料</td>
+                                                <td>td 資料</td>
+                                                <td>td 資料</td>
+                                                <td>td 資料</td>
+                                            </tr>
+                                        </table>
+                                        <!-- cp_slider+slick_lightbox -->
                         <!-- <div class="lightbox_slider">
                             <h3>燈箱照片</h3>
                             <div class="cp_slider">
@@ -592,7 +592,7 @@
     <script src="vendor/lazyload/lazyload.js"></script><!-- lazyload -->
     <script src="vendor/picturefill/picturefill.min.js" async></script><!-- picturefill -->
     <script src="vendor/scrolltable/jquery.scroltable.min.js"></script><!-- scrolltable -->
-     <!-- 燈箱facybox -->
+    <!-- 燈箱facybox -->
     <script src="vendor/facybox/dist/jquery.fancybox.min.js"></script>
     <!-- hyUI -->
     <script src="js/hyui.js"></script>
