--- a/fp_template.htm
+++ b/fp_template.htm
@@ -10,13 +10,13 @@
     <script src="js/html5shiv.js"></script>
     <script src="js/respond.min.js"></script>
 <![endif]-->
-    <!-- slick css-->
-    <link rel="stylesheet" type="text/css" href="vendor/slick/slick.css" />
-    <link rel="stylesheet" type="text/css" href="vendor/slick/slick-theme.css" />
-    <!-- hyUI css -->
-    <link rel="stylesheet" href="css/hyui.css">
-    <!-- favicon -->
-    <link href="images/favicon.png" rel="icon" type="image/x-icon">
+<!-- slick css-->
+<link rel="stylesheet" type="text/css" href="vendor/slick/slick.css" />
+<link rel="stylesheet" type="text/css" href="vendor/slick/slick-theme.css" />
+<!-- hyUI css -->
+<link rel="stylesheet" href="css/hyui.css">
+<!-- favicon -->
+<link href="images/favicon.png" rel="icon" type="image/x-icon">
 </head>
 
 <body>
@@ -68,10 +68,10 @@
                     <div class="form_grp">
                         <label for="mustSameAsId">搜尋</label>
                         <input name="username" id="mustSameAsId" type="text" placeholder="請輸入文字" accesskey="S">
-                        <input name="" type="submit" title="查詢" value="查詢" />
+                        <input name="" type="submit" value="查詢" class="btn btn-search" />
                     </div>
                     <div class="btn_grp">
-                        <input name="" type="submit" value="進階搜尋" />
+                        <input name="" type="submit" value="進階搜尋" class="btn" />
                     </div>
                     <div class="keywordHot">
                         <ul>
@@ -221,8 +221,8 @@
                                     </div>
                                 </div>
                                 <div class="btn_grp form_inline">
-                                    <input name="" type="reset" value="清除">
-                                    <input name="" type="submit" value="送出">
+                                    <input name="" type="reset" value="清除" class="btn btn-reset">
+                                    <input name="" type="submit" value="送出" class="btn btn-submit">
                                 </div>
                             </div>
                         </form>
