--- a/sitemap_template.htm
+++ b/sitemap_template.htm
@@ -69,10 +69,10 @@
                     <div class="form_grp">
                         <label for="mustSameAsId">搜尋</label>
                         <input name="username" id="mustSameAsId" type="text" placeholder="請輸入文字" accesskey="S">
-                        <input name="" type="submit" title="查詢" value="查詢" />
+                        <input name="" type="submit" value="查詢" class="btn btn-search" />
                     </div>
                     <div class="btn_grp">
-                        <input name="" type="submit" value="進階搜尋" />
+                        <input name="" type="submit" value="進階搜尋" class="btn" />
                     </div>
                     <div class="keywordHot">
                         <ul>
