--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         text-align: right;
     }
     @media screen and (max-width:545px) {
-       .btn_grp{
+     .btn_grp{
         text-align: center;
     } 
 }
@@ -156,6 +156,11 @@
                         <td></td>
                         <td>網站地圖</td>
                         <td><a href="sitemap_template.htm"></a></td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td>Google Search頁面</td>
+                        <td><a href="gs_template.htm"></a></td>
                     </tr>
                     <tr>
                         <td></td>
